add usage and demo to readme

--- a/demo/index.html
+++ b/demo/index.html
@@ -25,6 +25,7 @@
 
 <body>
     <div class="container" ng-controller="AppCtrl">
+        <h2>Angular Mini Preview Example</h2>
         <a href="https://codedrinker.github.com" mini-preview="{width: 300, height: 200, scale: 0.25, prefetch: 'pageload'}">https://codedrinker.github.com</a>
     </div>
 </body>
