--- a/demo/index.html
+++ b/demo/index.html
@@ -26,7 +26,9 @@
 <body>
     <div class="container" ng-controller="AppCtrl">
         <h2>Angular Mini Preview Example</h2>
-        <a href="https://codedrinker.github.com" mini-preview="{width: 300, height: 200, scale: 0.25, prefetch: 'pageload'}">https://codedrinker.github.com</a>
+        <a href="https://codedrinker.github.com" mini-preview>https://codedrinker.github.com</a>
+        <br>
+        <a href="{{'https://codedrinker.github.com'}}" mini-preview>{{'angular dynamic link'}}</a>
     </div>
 </body>
 
