support customize link address

--- a/demo/index.html
+++ b/demo/index.html
@@ -28,7 +28,11 @@
         <h2>Angular Mini Preview Example</h2>
         <a href="https://codedrinker.github.com" mini-preview>https://codedrinker.github.com</a>
         <br>
+        <br>
         <a href="{{'https://codedrinker.github.com'}}" mini-preview>{{'angular dynamic link'}}</a>
+        <br>
+        <br>
+        <a href="{{'https://codedrinker.github.com'}}" mini-preview="http://www.baidu.com">Using address separate from href</a>
     </div>
 </body>
 
