--- a/demo/index.html
+++ b/demo/index.html
@@ -33,6 +33,9 @@
         <br>
         <br>
         <a href="{{'https://codedrinker.github.com'}}" mini-preview="http://www.baidu.com">Using address separate from href</a>
+        <br>
+        <br>
+        <a href="{{'https://codedrinker.github.com'}}" mini-preview lazy-load="true">Lazy Load</a>
     </div>
 </body>
 
