--- a/demo/index.html
+++ b/demo/index.html
@@ -36,6 +36,9 @@
         <br>
         <br>
         <a href="{{'https://codedrinker.github.com'}}" mini-preview lazy-load="true">Lazy Load</a>
+        <br>
+        <br>
+        <a href="{{'https://codedrinker.github.com'}}" mini-preview="http://www.baidu.com" lazy-load="true" mini-width="700px" mini-height="400px">Customize Height and Width</a>
     </div>
 </body>
 
