add direction preview

--- a/demo/index.html
+++ b/demo/index.html
@@ -62,11 +62,24 @@
         </tr>
         <tr>
             <td>Customize Height and Width</td>
-            <td><a href="{{'https://codedrinker.github.com'}}" mini-preview="https://codedrinker.github.io/blog/the-smart-way-of-styling-and-customizing-file-input/" lazy-load="true" mini-width="700px" mini-height="400px">Link</a></td>
+            <td><a href="{{'https://codedrinker.github.com'}}" mini-preview="https://codedrinker.github.io/blog/the-smart-way-of-styling-and-customizing-file-input/" lazy-load="true"
+                   mini-width="700px" mini-height="400px">Link</a></td>
         </tr>
         <tr>
-            <td></td>
-            <td></td>
+            <td>Top right</td>
+            <td><a href="{{'https://codedrinker.github.com'}}" mini-preview mini-direction="tr" lazy-load="true">Link</a></td>
+        </tr>
+        <tr>
+            <td>Top left</td>
+            <td><a href="{{'https://codedrinker.github.com'}}" mini-preview mini-direction="tl" lazy-load="true">Link</a></td>
+        </tr>
+        <tr>
+            <td>Bottom right</td>
+            <td><a href="{{'https://codedrinker.github.com'}}" mini-preview mini-direction="br" lazy-load="true">Link</a></td>
+        </tr>
+        <tr>
+            <td>Bottom left</td>
+            <td><a href="{{'https://codedrinker.github.com'}}" mini-preview mini-direction="bl" lazy-load="true">Link</a></td>
         </tr>
     </table>
 </div>
