add auto direction support

--- a/demo/index.html
+++ b/demo/index.html
@@ -81,6 +81,10 @@
             <td>Bottom left</td>
             <td><a href="{{'https://codedrinker.github.com'}}" mini-preview mini-direction="bl" lazy-load="true">Link</a></td>
         </tr>
+        <tr>
+            <td>Auto adjust direction</td>
+            <td><a href="{{'https://codedrinker.github.com'}}" mini-preview mini-direction="auto" lazy-load="true">Link</a></td>
+        </tr>
     </table>
 </div>
 </body>
